force-app/main/default/objects/OptimoRoute_Batch_Settings__c/OptimoRoute_Batch_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>OptimoRoute Batch Settings</label>
</CustomObject>