force-app/main/default/objects/OptimoRoute_Batch_Settings__c/fields/Batch_Job_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Size__c</fullName>
    <label>Batch Job Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>