force-app/main/default/objects/OptimoRoute_Batch_Settings__c/fields/Disable_Batch_Job_Execution__c.field-meta.xml
<CustomField>
    <fullName>Disable_Batch_Job_Execution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Batch Job Execution</label>
    <type>Checkbox</type>
</CustomField>