force-app/main/default/objects/OptimoRoute_Batch_Settings__c/fields/Last_Batch_Job_Executed__c.field-meta.xml
<CustomField>
    <fullName>Last_Batch_Job_Executed__c</fullName>
    <label>Last Batch Job Executed</label>
    <type>DateTime</type>
</CustomField>